--- a/doc/api.yaml
+++ b/doc/api.yaml
@@ -4,9 +4,9 @@ info:
   description: |-
     This OpenAPI document describes APIs for the project "WASAText".
 
-    Student: Damir Tassybayev
-    Matricola: 2046612
-    E-mail: tassybayev.2046612@studenti.uniroma1.it
+    Student: Aruzhan Rakhmzhan
+    Matricola: 2059978
+    E-mail: rakhmzhan.2059978@studenti.uniroma1.it
   version: "1.0.2"
 
 tags:
